# py_load_faers

./: .gitignore  AGENTS.md  FAERS_DOCUMENTATION.md  FAERS_Loader_FRD.md  FRD_Implementation_Comparison.md  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
py_load_faers/: __init__.py  cli.py  config.py  database.py  downloader.py  engine.py  exceptions.py  models.py  parser.py  processing.py  staging.py  types.py
py_load_faers/postgres/: loader.py
tests/: conftest.py  test_cli.py  test_config.py  test_data_cleaning.py  test_database.py  test_downloader.py  test_engine.py  test_parser.py  test_processing.py  test_staging.py
tests/integration/: conftest.py  sample_faers.xml  test_checksum_feature.py  test_delta_load_engine.py  test_parquet_staging_load.py  test_postgres_loader.py  test_xml_load_engine.py
tests/integration/test_data/: realistic_faers.xml
tests/integration/test_data/ascii_quarter/: DELE24Q1.TXT  DEMO24Q1.TXT  DRUG24Q1.TXT  REAC24Q1.TXT
tests/unit/: test_postgres_loader_unit.py
